--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* anchor elements */
 a:link {
-    color: #161616;
+    color: var(--text-color);
     text-decoration: none;
 }
 a:visited {
