--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -47,18 +47,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 /* anchor elements */
 a:link {
-    color: var(--text-color);
-    text-decoration: none;
+	/* set the color text */
+	color: var(--text-color);
+	/* set the decoration in anchor element (without underscore under text) */
+	text-decoration: none;
 }
+
+/* anchor elements that have clicked or visited before */
 a:visited {
-    font-style: italic;
+	/* set the text style */
+	font-style: italic;
 }
+
+/* anchor elements that the mouse is over */
 a:hover {
-    text-decoration: underline;
+	/* set the decortation (with a underscore under text) */
+	text-decoration: underline;
 }
+
+/* anchor elements that was clicked when the mouse button has been depressed and before the click is over.*/
 a:active {
-    background-color: var(--color-dark-grey);
+	/* set the background color */
+	background-color: var(--color-light-grey);
 }
+/* all elements with class visually-hidden */
 .visually-hidden {
     display: none;
 }
