--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -157,16 +157,26 @@ a:active {
     color: var(--nav-item-link-hover);
 }
 
-ul.row{
-    margin: 0;
-    padding: none;
-    list-style: none;
+ul.row {
+	/* set the margin all sides outside the element */
+	margin: 0;
+	/* set the padding in all sides, inside element */
+	padding: 0;
+	/* take off the style in list */
+	list-style: none;
 }
-.col-1-3{
-    width: 33.33%;
-    float: left;
-    padding: 0.5rem;
+
+/* all elements with class col-1-3 */
+.col-1-3 {
+	/* set width according to its parent */
+	width: 33.33%;
+	/* set float content */
+	float: left;
+	/* set the padding in all sides, inside element */
+	padding: 0.5rem;
 }
+
+/* all elements with class col-1-2 */
 .col-1-2 {
 	/* set width according to its parent */
 	width: 50%;
@@ -175,6 +185,8 @@ ul.row{
 	/* set the padding in all sides, inside element */
 	padding: 0.5rem;
 }
+
+/* all elements with class footer-copyright */
 .footer-copyright {
 	/* set the margin all sides outside the element */
 	margin: 0;
